[package]
name = "biblatex"
version = "0.4.2"
authors = ["Martin Haug <mhaug@live.de>"]
license = "MIT OR Apache-2.0"
description = "Parsing, writing, and evaluating BibTeX and BibLaTeX files"
repository = "https://github.com/typst/biblatex"
readme = "README.md"
categories = ["database", "parser-implementations", "text-processing"]
keywords = ["bibtex", "biblatex", "biber", "bibliography", "latex"]
edition = "2018"

[workspace]
members = ["bench"]

[dependencies]
chrono = { version = "0.4.19", default-features = false }
lazy_static = "1"
numerals = "0.1.4"
paste = "1"
regex = { version = "1.4", default-features = false, features = ["std", "unicode-perl"] }
strum = { version = "0.23", features = ["derive"] }
unicode-normalization = "0.1"
serde = { version = "1.0.133", features = ["derive"] }
