[package]
name = "biblatex"
version = "0.5.0"
authors = ["Martin Haug <mhaug@live.de>"]
license = "MIT OR Apache-2.0"
description = "Parsing, writing, and evaluating BibTeX and BibLaTeX files"
repository = "https://github.com/typst/biblatex"
readme = "README.md"
categories = ["database", "parser-implementations", "text-processing"]
keywords = ["bibtex", "biblatex", "biber", "bibliography", "latex"]
edition = "2018"

[workspace]
members = ["bench"]

[dependencies]
chrono = { version = "0.4", default-features = false }
numerals = "0.1"
paste = "1"
strum = { version = "0.24", features = ["derive"] }
unicode-normalization = "0.1"
serde = { version = "1.0", features = ["derive"], optional = true }
unscanny = { git="https://github.com/typst/unscanny" }
