[package]
name = "biblatex"
version = "0.10.0"
authors = ["Martin Haug <mhaug@live.de>"]
license = "MIT OR Apache-2.0"
description = "Parsing, writing, and evaluating BibTeX and BibLaTeX files"
repository = "https://github.com/typst/biblatex"
readme = "README.md"
categories = ["database", "parser-implementations", "text-processing"]
keywords = ["bibtex", "biblatex", "biber", "bibliography", "latex"]
edition = "2021"

[workspace]
members = ["bench"]

[dependencies]
numerals = "0.1"
paste = "1"
strum = { version = "0.26", features = ["derive"] }
unicode-normalization = "0.1"
serde = { version = "1", features = ["derive"], optional = true }
unscanny = "0.1"
